# eroge_timer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md
installer/: eroge_timer.iss
resources/: app.rc  resource.h
src/: app_settings.c  app_settings.h  clock_renderer.h  clock_renderer_gdi.c  main.c  overlay.c  overlay.h  play_time_dialog.c  play_time_dialog.h  play_time_tracker.c  play_time_tracker.h  settings_dialog.c  settings_dialog.h  settings_store.c  settings_store.h  tray.c  tray.h
